<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/indexOrder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:text="@string/stt"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="1" />

    <TextView
        android:id="@+id/idOrder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="@string/product" />

    <TextView
        android:id="@+id/describeOrder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="@string/describe" />

    <TextView
        android:id="@+id/priceOrder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/amountOrder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="@string/amount" />

    <TextView
        android:id="@+id/totalPricePerOder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingStart="@dimen/dp_4"
        android:paddingLeft="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingRight="@dimen/dp_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="@string/total" />
</LinearLayout>