<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.order.OrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_1A3D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Theme.MyFancyTheme"
        app:title="@string/list_order"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeader"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_4"
        app:cardCornerRadius="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/order_information"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_style"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/especially_character"
                    android:textColor="@color/red_3333" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="24"
                    android:text="@string/money"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/style_order"
                    android:textColor="@color/red_3333" />

                <View
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_0"
                    android:layout_weight="11" />

                <TextView
                    android:id="@+id/totalOrderPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="24"
                    android:textColor="@color/red_3333"
                    tools:text="@string/amount" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_4"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/gray_BCBC" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:hint="@string/note_hint"
                android:inputType="text"
                android:textSize="14sp"
                android:importantForAutofill="no" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/red_1A3D"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/stt"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="end"
            android:background="@drawable/left_line_bg_red"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/product"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/left_line_bg_red"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/describe"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/left_line_bg_red"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/left_line_bg_red"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/left_line_bg_red"
            android:paddingStart="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOrderItem"
        android:layout_width="@dimen/dp_0"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:background="@color/while_F3F3"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAccItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:layout_weight="1"
            android:background="@color/red_3333"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@color/gray"
            android:layout_weight="1"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>