<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/while_F3F3"
    tools:context=".features.add_item_popup.AddItemPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:background="@color/red_1A3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_2"
                android:contentDescription="@string/app_name"
                android:src="@drawable/outline_warning_outline_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/pick_product"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHeader"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            app:cardCornerRadius="@dimen/dp_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/search"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/searchProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_add_item_hint"
                    android:inputType="text"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/red_1A3D"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/stt"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/left_line_bg_red"
                android:paddingStart="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/product"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/left_line_bg_red"
                android:paddingStart="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/left_line_bg_red"
                android:paddingStart="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tableLayout"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:background="@color/while_F3F3"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textColor="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>